--- a/test.html
+++ b/test.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello</h1>
+    <background-img>https://ediya.com/images/menu/drink_visual.jpg</background-img>
+    <h1>음료</h1>
+    <h2>ALWAYS BESIDE YOU, EDIYA COFFEE</h2>
+    
 </body>
 </html>
